{
    "name": "TouchControl",
    "maps": [
        {
            "name": "Touch",
            "id": "b4ecc2e3-e786-4367-849b-7fa10d716dbd",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "d1751d05-5ed8-452f-8458-31f0db3a2e2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "e0258648-d336-448b-821a-6769c6788896",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e8131e7a-d798-496a-8393-c9dc3222cc20",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "266d374b-3bd3-4130-a30d-99ec290e6448",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}